# simplicity-native-multisig

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  justfile
.github/workflows/: lint.yml  pages.yml  tests.yml
crates/contracts/: .gitignore  Cargo.toml  README.md  Simplex.toml  build.rs
crates/contracts/examples/: export_multisig_certificate.rs
crates/contracts/simf/: multisig_n_of_3.simf  vote.simf
crates/contracts/src/: constants.rs  lib.rs  multisig_builder.rs  runner.rs  scripts.rs  sdk.rs  vote_builder.rs
crates/contracts/src/common/: chunked_records.rs  constants.rs  mod.rs  scripts.rs  utxo.rs
crates/contracts/src/multisig/: builder.rs  mod.rs
crates/contracts/src/multisig/builder/: certificate.rs  coq.rs  coq_typed.rs  coq_typed_text.rs  coq_types.rs  encoding.rs  tests.rs
crates/contracts/src/vote/: builder.rs  message.rs  mod.rs  onchain_encoder.rs
crates/contracts/tests/: README.md  mod.rs  setup.rs
crates/contracts/tests/common/: setup.rs
crates/contracts/tests/regtest/: mod.rs  multisig.rs  vote.rs
crates/uniffi/: Cargo.toml  README.md
crates/uniffi/src/: lib.rs
crates/wasm/: Cargo.toml  LICENSE  README.md
crates/wasm/src/: lib.rs  wire.rs
crates/wasm/src/wire/: announcement.rs  session.rs  spend.rs  tests.rs  types.rs  util.rs  vote.rs
crates/wasm/src/wire/spend/: types.rs
crates/wasm/src/wire/tests/: announcements.rs  finalization.rs  fixtures.rs  proposals.rs  sessions.rs
formal/: .gitignore  AUDIT.md  BRIDGE_RESEARCH.md  BridgeTypeTranslation.v  CmrWellFormed.v  CompiledMultisigByteData.v  CompiledMultisigExample.v  CompiledMultisigExampleCore.v  CompiledMultisigExecution.v  CompiledMultisigFoundation.v  CompiledMultisigFoundationCmrEvidence.v  CompiledMultisigFoundationCmrSecurity.v  CompiledMultisigFoundationSecurity.v  CompiledMultisigFoundationTypes.v  CompiledMultisigRealCmr.v  CompiledMultisigRealCmrChecked.v  CompiledMultisigRealSecurity.v  CompiledMultisigTypedExample.v  CompiledMultisigTypedExampleArrowDefs1.v  CompiledMultisigTypedExampleArrowDefs2.v  CompiledMultisigTypedExampleArrowDefs3.v  CompiledMultisigTypedExampleData.v  CompiledMultisigTypedExampleTypeDefs.v  CompiledMultisigTypedExampleTypeTable1.v  CompiledMultisigTypedExampleTypeTable2.v  CompiledMultisigTypedExampleTypeTable3.v  CompiledMultisigTypedExampleTypeTable4.v  ElementsConcreteJets.v  ElementsJetCmr.v  ElementsJetEnvironment.v  ElementsJetSemantics.v  ElementsJetSemanticsInhabited.v  ElementsJetTypes.v  ElementsJets.v  FOUNDATION_PLAN.md  FoundationCmrAlgebra.v  FoundationCore.v  FoundationCoreRecursive.v  FoundationCoreTerms.v  FoundationCoreTypes.v  (+44 more)
formal/docs/: bridge-path.md  bridge-targets.md  compiled-artifacts.md
formal/scripts/: rocq_compile_project.sh
paper/: README.md  references.bib
permissionless-simplicity-multisig/: main.tex  references.bib
programmable-signature-tex/: .gitignore  Makefile  main.tex
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  app-action-context.ts  app-action-tools.ts  app-actions.ts  app-helpers.ts  app-model.ts  app-shell.tsx  app-state-reset.ts  components.tsx  styles.css  types.ts
web/src/lib/: contracts.ts  demo.ts  faucet.ts  format.ts  outpoints.ts  sats.ts
web/src/lib/lwk/: core.ts  network.ts  participants.ts  publishing.ts  scan.ts  spend.ts
web/src/styles/: base.css  responsive.css  shell.css  workflows.css  workspace.css
web/src/views/: builder-inputs.tsx  builder-proposal-panel.tsx  builder-view.tsx  builder-vote-panels.tsx  create-view.tsx  faucet-view.tsx  liquid-testnet-display.ts  proposals-view.tsx  setup-view.tsx  transactions-view.tsx
web/tests/: creation-isolated.spec.ts
