[workspace]
resolver = "3"
members = [
    "crates/contracts",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.91.0"
repository = "https://github.com/BlockstreamResearch/simplicity-native-multisig"

[workspace.lints.clippy]
multiple_crate_versions = "allow"

[workspace.metadata.rbmt.toolchains]
nightly = "nightly-2025-08-23"
stable = "1.95.0"

[workspace.dependencies]
bip39 = "2.2.2"
elements = { version = "0.25.2", features = ["base64"] }
hex = "0.4.3"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
simplicityhl = { version = "0.5.0", features = ["serde"] }

smplx-std = "0.0.6"
wasm-bindgen = "0.2.122"
